--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/Fabriciu/ApplicationsServer#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "axios": "^0.18.1",
+    "mongodb": "^3.3.0"
   }
 }
