--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "path": "^0.12.7",
     "axios": "^0.18.1",
-    "mongodb": "^3.3.0"
+    "mongodb": "^3.3.0",
+    "onchange": "^6.0.0"
   }
 }
